# uro

bootstrap-project/: add_product.html  edit_product.html  index.html  scripts.js
cpp-projekt/: .gitignore  CMakeLists.txt
cpp-projekt/include/: product.h  shopsystem.h
cpp-projekt/src/: main.cpp  shopsystem.cpp
exec02/: exec02.py  sab_temp.py
exec03/: main.py
python-project/: data.py  main.py
